K8s/deployment.yml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: studio
    namespace: dolittle
  spec:
    template:
      metadata:
        labels:
          app: studio
          name: studio
      spec:
        containers:
        - name: studio
          image: dolittle/studio
          imagePullPolicy: Always
          ports:
          - containerPort: 80
