K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: studio
    namespace: dolittle
    labels:
      app: studio
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: studio-port
      protocol: TCP
    selector:
      app: studio
      name: studio
