K8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: studio
  namespace: dolittle
spec:
  tls:
  - hosts:
    - dolittle.studio
    secretName: dolittle-studio-secret
  rules:
  - host: dolittle.studio
    http:
      paths:
      - path: /
        backend:
          serviceName: studio
          servicePort: 80
